Fixed some layout issues.

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -1046,12 +1046,6 @@ textarea {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .navbar-fixed-top,
-  .navbar-fixed-bottom,
-  .navbar-static-top {
-    margin-left: -20px;
-    margin-right: -20px;
-  }
   .container-fluid {
     padding: 0;
   }
@@ -2034,7 +2028,7 @@ textarea {
   body.docs .navbar-static-top .container,
   body.docs .navbar-fixed-top .container,
   body.docs .navbar-fixed-bottom .container {
-    width: auto;
+    width: 1480px;
     padding-left:.75em;
   }
 }
